// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewAddressScreen component should render a billing address form correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <AddressEdit
    address={
      Object {
        "addressId": null,
        "firstName": undefined,
        "lastName": undefined,
        "zip": undefined,
      }
    }
    formWarning={[Function]}
    onChange={[Function]}
    poHelpText={false}
    style={
      Object {
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
    topSpacing={0}
  >
    <Text
      size="large"
      weight="bold"
    >
      Enter a New Billing Address
    </Text>
    <Text
      color="error"
      size="small"
    >
      
    </Text>
  </AddressEdit>
  <KeyboardAwareView>
    <FixedBottomButton
      accessibilityLabel="Submit New Address"
      buttonText="Use This Address"
      hideOnKeyboardShow={true}
      isLoading={false}
      onPress={[Function]}
      pinToKeyboard={false}
      trackAction="build:app:newaddress:submit"
    />
  </KeyboardAwareView>
</View>
`;

exports[`NewAddressScreen component should render a shipping address form correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <AddressEdit
    address={
      Object {
        "addressId": null,
        "firstName": undefined,
        "lastName": undefined,
        "zip": undefined,
      }
    }
    formWarning={[Function]}
    onChange={[Function]}
    poHelpText={true}
    style={
      Object {
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
    topSpacing={0}
  >
    <Text
      size="large"
      weight="bold"
    >
      Enter a New Shipping Address
    </Text>
    <Text
      color="error"
      size="small"
    >
      
    </Text>
  </AddressEdit>
  <KeyboardAwareView>
    <FixedBottomButton
      accessibilityLabel="Submit New Address"
      buttonText="Use This Address"
      hideOnKeyboardShow={true}
      isLoading={false}
      onPress={[Function]}
      pinToKeyboard={false}
      trackAction="build:app:newaddress:submit"
    />
  </KeyboardAwareView>
</View>
`;
